--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>누리캅스</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+  <title>Nuricops</title>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="css/reset윤다경.css">
   <link rel="stylesheet" href="css/style copy.css">
@@ -24,52 +24,53 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#none">누리마당</a>
+          <li><a href="#none">コミュニティ</a>
             <ul class="sub">
-              <li class="sub_li"><a href="#none">출석부</a></li>
-              <li class="sub_li"><a href="#none">자유게시판</a></li>
-              <li class="sub_li"><a href="#none">정보공유게시판</a></li>
-              <li class="sub_li"><a href="#none">발전제안게시판</a></li>
-              <li class="sub_li"><a href="#none">사진게시판</a></li>
+              <li class="sub_li"><a href="#none">出席簿</a></li>
+              <li class="sub_li"><a href="#none">自由掲示板</a></li>
+              <li class="sub_li"><a href="#none">情報共有掲示板</a></li>
+              <li class="sub_li"><a href="#none">改善提案掲示板</a></li>
+              <li class="sub_li"><a href="#none">写真掲示板</a></li>
+            </ul>
+          <li><a href="#none">通報広場</a>
+            <ul class="sub">
+              <li class="sub_li"><a href="#none">通報する</a></li>
+              <li class="sub_li"><a href="#none">違法有害情報</a></li>
+              <li class="sub_li"><a href="#none">通報手続き</a></li>
+              <li class="sub_li"><a href="#none">資料室</a></li>
             </ul>
           </li>
-          <li><a href="#none">신고마당</a>
+          <li><a href="#none">情報広場</a>
             <ul class="sub">
-              <li class="sub_li"><a href="#none">신고하기</a></li>
-              <li class="sub_li"><a href="#none">불법유해정보란</a></li>
-              <li class="sub_li"><a href="#none">신고절차</a></li>
-              <li class="sub_li"><a href="#none">자료실</a></li>
-            </ul>
-          </li>
-          <li><a href="#none">알림마당</a>
-            <ul class="sub">
-              <li class="sub_li"><a href="notice.html">공지사항</a></li>
-              <li class="sub_li"><a href="#none">누리캅스 알림</a></li>
-              <li class="sub_li"><a href="#none">이 달의 누리캅스</a></li>
-              <li class="sub_li"><a href="#none">누리캅스 앨범</a></li>
+              <li class="sub_li"><a href="notice.html">お知らせ</a></li>
+              <li class="sub_li"><a href="#none">Nuricopsのお知らせ</a></li>
+              <li class="sub_li"><a href="#none">今月のNuricops</a></li>
+              <li class="sub_li"><a href="#none">Nuricopsアルバム</a></li>
               <li class="sub_li"><a href="#none">
-                  <p class="cyber">사이버범죄 예방 자료실</p>
+                  <p class="cyber">サイバー犯罪予防資料室</p>
                 </a></li>
-            </ul>
+              </a>
           </li>
-          <li><a href="#none">소개마당</a>
-            <ul class="sub">
-              <li class="sub_li"><a href="intro.html">누리캅스 소개</a></li>
-              <li class="sub_li"><a href="#none">연혁</a></li>
-            </ul>
-          </li>
-          <li><a href="#none">이용안내</a>
-            <ul class="sub">
-              <li class="sub_li"><a href="#none">이용약관</a></li>
-              <li class="sub_li"><a href="#none">개인정보 처리방침</a></li>
-              <li class="sub_li"><a href="#none">사이트맵</a></li>
-            </ul>
-          </li>
+        </ul>
+        </li>
+        <li><a href="#none">紹介広場</a>
+          <ul class="sub">
+            <li class="sub_li"><a href="intro.html">Nuricops紹介</a></li>
+            <li class="sub_li"><a href="#none">沿革</a></li>
+          </ul>
+        </li>
+        <li><a href="#none">利用案内</a>
+          <ul class="sub">
+            <li class="sub_li"><a href="#none">利用規約</a></li>
+            <li class="sub_li"><a href="#none">個人情報の取り扱い</a></li>
+            <li class="sub_li"><a href="#none">サイトマップ</a></li>
+          </ul>
+        </li>
         </ul>
       </nav>
       <div class="login_btn">
         <button class="login">
-          <a href="#none">로그인</button></a>
+          <a href="#none">ログイン</button></a>
       </div>
       <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
     </div>
@@ -79,57 +80,57 @@
     <div class="accordion" id="accordion-menu">
 
       <div class="accordion-item">
-        <div class="accordion-title">누리마당</div>
+        <div class="accordion-title">コミュニティ</div>
         <div class="accordion-content">
-          <ul>
-            <li><a href="#none">출석부</a></li>
-            <li><a href="#none">자유게시판</a></li>
-            <li><a href="#none">정보공유게시판</a></li>
-            <li><a href="#none">발전제안게시판</a></li>
-            <li><a href="#none">사진게시판</a></li>
+          <ul class="sub">
+            <li class="sub_li"><a href="#none">出席簿</a></li>
+            <li class="sub_li"><a href="#none">自由掲示板</a></li>
+            <li class="sub_li"><a href="#none">情報共有掲示板</a></li>
+            <li class="sub_li"><a href="#none">改善提案掲示板</a></li>
+            <li class="sub_li"><a href="#none">写真掲示板</a></li>
           </ul>
         </div>
       </div>
       <div class="accordion-item">
-        <div class="accordion-title">신고마당</div>
+        <div class="accordion-title">通報広場</div>
         <div class="accordion-content">
           <ul>
-            <li><a href="#none">신고하기</a></li>
-            <li><a href="#none">불법유해정보란</a></li>
-            <li><a href="#none">신고절차</a></li>
-            <li><a href="#none">자료실</a></li>
+            <li><a href="#none">通報する</a></li>
+            <li><a href="#none">違法有害情報</a></li>
+            <li><a href="#none">通報手続き</a></li>
+            <li><a href="#none">資料室</a></li>
           </ul>
         </div>
       </div>
       <div class="accordion-item">
-        <div class="accordion-title">알림마당</div>
+        <div class="accordion-title">情報広場</div>
         <div class="accordion-content">
           <ul>
-            <li><a href="notice.html">공지사항</a></li>
-            <li><a href="#none">누리캅스 알림</a></li>
-            <li><a href="#none">이 달의 누리캅스</a></li>
-            <li><a href="#none">누리캅스 앨범</a></li>
-            <li><a href="#none">사이버범죄 예방 자료실</a></li>
+            <li><a href="notice.html">お知らせ</a></li>
+            <li><a href="#none">Nuricopsお知らせ</a></li>
+            <li><a href="#none">今月のNuricops</a></li>
+            <li><a href="#none">Nuricopsアルバム</a></li>
+            <li><a href="#none">サイバー犯罪対策資料室</a></li>
           </ul>
         </div>
       </div>
       <div class="accordion-item">
-        <div class="accordion-title">소개마당</div>
+        <div class="accordion-title">紹介広場</div>
         <div class="accordion-content">
           <ul>
-            <li><a href="intro.html">누리캅스 소개</a></li>
-            <li><a href="#none">연혁</a></li>
-            <li><a href="#none">누리캅스 가입절차</a></li>
+            <li><a href="intro.html">Nuricops紹介</a></li>
+            <li><a href="#none">沿革</a></li>
+            <li><a href="#none">Nuricops登録手続き</a></li>
           </ul>
         </div>
       </div>
       <div class="accordion-item">
-        <div class="accordion-title">이용안내</div>
+        <div class="accordion-title">利用案内</div>
         <div class="accordion-content">
           <ul>
-            <li><a href="#none">이용약관</a></li>
-            <li><a href="#none">개인정보 처리방침</a></li>
-            <li><a href="#none">사이트맵</a></li>
+            <li><a href="#none">利用規約</a></li>
+            <li><a href="#none">個人情報の取り扱い</a></li>
+            <li><a href="#none">サイトマップ</a></li>
           </ul>
         </div>
       </div>
@@ -139,10 +140,10 @@
       <div class="main_inner">
         <div class="title">
           <h1>
-            <span class="ft_white">안전한</span>
-            <span class="ft_blue">인터넷</span>세상,
+            <span class="ft_white">安全な</span>
+            <span class="ft_blue">インターネット</span>世界、
             <div class="bottom">
-              <br> <span class="ft_blue">누리캅스</span>가 함께하겠습니다!
+              <br> <span class="ft_blue">Nuricops</span>がともに守ります！
             </div>
           </h1>
           </span>
@@ -205,7 +206,7 @@
       </div>
       <div class="animation title_icon">
         <span class="commu_title">
-          <p class="sns">경찰청 SNS</p>
+          <p class="sns">警察署SNS</p>
         </span>
         <div class="sns_wrap">
           <!-- SNS 아이콘 그룹 -->
@@ -266,7 +267,7 @@
     <!-- 섹션 알림마당 -->
     <section class="notifi">
       <span class="animation left notifi_title">
-        <p>알림마당</p>
+        <p>情報広場</p>
       </span>
       <div class="notifi_inner">
 
@@ -274,53 +275,57 @@
           <div class="notice_box">
             <div class="notice_title_n">
               <a href="notice.html">
-                공지사항</a>
+                お知らせ</a>
             </div>
             <ul class="notice_list">
               <a href="#none">
-                <li>2024년 국민참여 자살유발정보 집중클리닝 활동 안내(한국생명존중희망재단)</li>
+                <li>2024年国民参加自殺誘発情報集中クリーニング活動案内（韓国生命尊重希望財団）</li>
               </a>
               <a href="#none">
-                <li>영상콘텐츠 자살장면 가이드라인 세미나 알림 [한국생명존중희망재단]</li>
+                <li>映像コンテンツ自殺場面ガイドラインセミナーのお知らせ [韓国生命尊重希望財団]</li>
               </a>
               <a href="#none">
-                <li>2023년 불법스포츠도박 사이트 모니터링단 모집 공고</li>
+                <li>2023年違法スポーツ賭博サイトモニタリング団募集公告</li>
               </a>
               <a href="#none">
-                <li>2023년 국민참여 자살유발정보 집중클리닝 활동 안내(한국생명존중희망재단)</li>
+                <li>2023年国民参加自殺誘発情報集中クリーニング活動案内（韓国生命尊重希望財団）</li>
               </a>
+
             </ul>
           </div>
 
           <div class="notice_box">
             <div class="notice_title">
               <a href="#none">
-                사이버 범죄 예방 자료실</a>
+                サイバー犯罪予防資料室
+              </a>
             </div>
             <ul class="notice_list">
               <a href="#none">
-                <li>21년 사이버범죄 예방 콘텐츠 공모전 우수 이모티콘입니다.</li>
+                <li>2021年サイバー犯罪予防コンテンツ公募展優秀スタンプです。</li>
               </a>
               <a href="#none">
-                <li>21년 사이버범죄 예방 콘텐츠 공모전 우수 포스터입니다.</li>
+                <li>2021年サイバー犯罪予防コンテンツ公募展優秀ポスターです。</li>
               </a>
               <a href="#none">
-                <li>20년 사이버범죄 예방 콘텐츠 공모전 최우수 포스터입니다.</li>
+                <li>2020年サイバー犯罪予防コンテンツ公募展最優秀ポスターです。</li>
               </a>
               <a href="#none">
-                <li>메신저 피싱 예방 카드뉴스입니다.</li>
+                <li>メッセンジャーフィッシング予防カードニュースです。</li>
               </a>
+            </ul>
+
             </ul>
           </div>
 
           <div class="notice_box">
             <div class="notice_title">
-              <a href="#none">우수 누리캅스</a>
+              <a href="#none">優秀Nuricops</a>
 
             </div>
             <ul class="notice_list">
-              <li class="best">로그인 후 이용하실 수 있습니다.<br>
-                누리캅스가 되어 사이버 안전 지킴이로<br> 활약해 보세요!
+              <li class="best">ログインした後、ご利用いただけます。<br>
+                Nuricopsになって、サイバー安全の守り手として活躍してみませんか！
               </li>
               <button class="notice"><a href="#none">
                 </a></button>
@@ -344,70 +349,71 @@
 
           <div class="top_deco">
             <div class="top_deco_inner">
-              <p class="top_deco_text">누리캅스 가입 절차</p>
+              <p class="top_deco_text">Nuricops登録手続き</p>
             </div>
           </div>
 
 
 
           <ul class="process">
-            <li class="box"><img src="images/join_1.svg" alt="회원가입 신청서 작성">
-              <p class="process_title">회원가입
-                신청서 작성 </p>
-              <p class="process_text">가입 신청서 ▶
-                <a class="download" href="#none">내려받기</a>
+            <li class="box">
+              <img src="images/join_1.svg" alt="会員登録申請書作成">
+              <p class="process_title">会員登録申込書作成</p>
+              <p class="process_text">登録申請書 ▶
+                <a class="download" href="#none">ダウンロード</a>
               </p>
             </li>
-            <li class="arrow_r"><img src="images/arrow_r.png" alt="오른쪽 화살표"></li>
-            <li class="box"><img src="images/join_2.svg" alt="회원가입 신청서 제출">
-              <p class="process_title">회원가입
-                신청서 제출 </p>
-              <p class="process_text">시도청 담당자
-                <a class="download" href="#none">연락처</a>
+            <li class="arrow_r"><img src="images/arrow_r.png" alt="右矢印"></li>
+            <li class="box">
+              <img src="images/join_2.svg" alt="会員登録申請書提出">
+              <p class="process_title">会員登録申込書提出</p>
+              <p class="process_text">地方自治体担当者
+                <a class="download" href="#none">連絡先</a>
               </p>
             </li>
-            <li class="arrow_r"><img src="images/arrow_r.png" alt="오른쪽 화살표"></li>
+            <li class="arrow_r"><img src="images/arrow_r.png" alt="右矢印"></li>
 
-
-            <li class="box"><img src="images/join_3.svg" alt="가입 여부 결정">
+            <li class="box">
+              <img src="images/join_3.svg" alt="加入の可否決定">
               <p class="process_title">
-                가입여부 결정 </p>
+                可否決定</p>
               <p class="process_text">
-                심사위원회 개최</p>
+                審査委員会開催</p>
             </li>
 
-            <li class="arrow_d"><img src="images/arrow_d.png" alt="아래쪽 화살표"></li>
-            <li class="box"><img src="images/join_6.svg" alt="홈페이지 가입">
+            <li class="arrow_d"><img src="images/arrow_d.png" alt="下矢印"></li>
+            <li class="box">
+              <img src="images/join_6.svg" alt="ホームページでの加入">
               <p class="process_title">
-                홈페이지 가입</p>
+                ホームページでの登録</p>
               <p class="process_text">
-                누리캅스 회원가입</p>
+                Nuricops会員登録</p>
             </li>
-            <li class="arrow_l"><img src="images/arrow_l.png" alt="왼쪽 화살표">
+            <li class="arrow_l"><img src="images/arrow_l.png" alt="左矢印">
             </li>
-            <li class="box"><img src="images/join_5.svg" alt="회원 등록">
+            <li class="box">
+              <img src="images/join_5.svg" alt="会員登録">
               <p class="process_title">
-                홈페이지 회원 등록</p>
+                ホームページで会員登録</p>
               <p class="process_text">
-
-                시도청에서 정식 회원 등록</p>
+                地方自治体で正式会員登録</p>
             </li>
-            <li class="arrow_l"><img src="images/arrow_l.png" alt="왼쪽 화살표"></li>
-            <li class="box"><img src="images/join_4.svg" alt="회원 통보">
+            <li class="arrow_l"><img src="images/arrow_l.png" alt="左矢印"></li>
+            <li class="box">
+              <img src="images/join_4.svg" alt="会員通知">
               <p class="process_title">
-                회원 통보</p>
+                会員通知</p>
               <p class="process_text">
-                심사위원회를 통해 <br> 가입이 결정된 회원에게 통보</p>
+                審査委員会を通じて<br>加入が決定した会員に通知</p>
             </li>
           </ul>
-
 
         </div>
     </section>
 
     <section class="banner">
       <div class="banner_inner">
-        <span class="banner_title">배너존</span>
+        <span class="banner_title">バナー</span>
         <div class="bannerWrap">
           <div class="swiper bannerSwiper"><!--"swiper mySwiper  -->
             <div class="swiper-wrapper"> <!--  swiper-wrapper-->
@@ -439,12 +445,14 @@
       <div class="footer_inner">
         <div class="footer_content">
           <div class="footer_logo"><a href="index.html"><img src="images/logo_footer.svg" alt="푸터 로고"></a></div>
-          <div class="footer_text">서울특별시 서대문구 통일로 97 경찰민원 콜센터 : 182(유료)<br>
-            Copyright ⓒ 2011 경찰청. All Rights Reserved</div>
+          <div class="footer_text">ソウル特別市 西大門区 統一路 97 警察民願コールセンター : 182（有料）
+            <br>
+            Copyright ⓒ 2024 yoondagyoung. All Rights Reserved
+          </div>
           <ul class="footer_right">
-            <a href="#none">개인정보처리방침</a>
+            <a href="#none">個人情報の取り扱い</a>
             &nbsp|&nbsp
-            <a href="#none">이용약관</a>
+            <a href="#none">利用規約</a>
 
           </ul>
         </div>
@@ -461,31 +469,32 @@
   <div class="modal_login">
     <div class="log_in">
       <div class="btn_close">
-        <i class="fa-solid xi-close"></i>
+        <i class="fa-solid fa-xmark"></i>
       </div>
 
-      <h1>로그인</h1>
+      <h1>ログイン</h1>
       <p class="login_text">
-        누리캅스는 정식 회원이 되신 이후에<br>
-        홈페이지 회원가입을 하실 수 있습니다.<br>
-        자세한 내용은 <a class="join_page" href="index.html#join">누리캅스 가입 절차</a>를 확인해 주세요.
+        Nuricopsは、公式会員になってから<br>
+        サイトの会員登録ができます。<br>
+        詳しい情報は、<a class="join_page" href="index.html#join">Nuricops登録手続き</a>をご確認ください。
       </p>
-      <input type="text" placeholder="아이디">
-      <input type="password" placeholder="비밀번호">
+      <input type="text" placeholder="ID">
+      <input type="password" placeholder="パスワード">
       <label class="check">
-        <input type="checkbox">가상 키패드 사용
+        <input type="checkbox">仮想キーボードの使用
+
       </label>
-      <input type="button" value="로그인">
+      <input type="button" value="ログイン">
       <div class="save_info">
 
 
       </div>
       <div class="login_bottom">
-        <span class="join"><a href="#none">회원가입</a></span>
+        <span class="join"><a href="#none">会員登録</a></span>
         &nbsp;|&nbsp;
-        <span class="id"><a href="#none">아이디 찾기</a></span>
+        <span class="id"><a href="#none">IDをお忘れの方</a></span>
         &nbsp;|&nbsp;
-        <span class="pw"><a href="#none">비밀번호 찾기</a></span>
+        <span class="pw"><a href="#none">パスワードをお忘れの方</a></span>
       </div>
     </div>
   </div>
