--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 <div class="modal_login">
   <div class="log_in">
     <div class="btn_close">
-      <i class="fa-solid xi-close"></i>
+     <i class="fa-solid fa-xmark"></i>
     </div>
 
     <h1>로그인</h1>
