--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/style copy.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/responsive.css">
-  <link rel="icon" href="images/favicon/favicon.ico">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
