--- a/notice.html
+++ b/notice.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/notice_responsive.css">
-    <link rel="icon" href="images/favicon/favicon.ico">
+    <link rel="icon" href="images/favicon.svg">
     
 
 
